--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+requests
+pygame
+PyQt5
+
 SQLAlchemy_serializer==1.3.4.2
 Werkzeug==1.0.0
 winshell==0.6
@@ -7,4 +11,4 @@ Flask_Login==0.5.0
 Flask==1.1.1
 Flask_WTF==0.14.3
 Flask_RESTful==0.3.8
-PyQt5==5.15.0
+
